# SparkAggregationMethods

./: .gitignore  LICENSE  Open_Window_Terminals.bat  Open_Window_Terminals.ps1  PSScriptAnalyzerSettings.psd1  SparkAggMethods-python-workspace.code-workspace  cspell.json  makefile_python.ps1  pyrightconfig.json  python-workspace.code-workspace  setup.cfg
Admin/: makefile.ps1  pyrightconfig.json  (+2 more)
CommonPython/: cspell.json  makefile.ps1  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_frozen.txt
CommonPython/spark_agg_methods_common_python/: challenge_strategy_registry.py  perf_test_common.py
CommonPython/spark_agg_methods_common_python/challenges/bi_level/: bi_level_record_runs.py  bi_level_test_data_types.py
CommonPython/spark_agg_methods_common_python/challenges/conditional/: conditional_record_runs.py  conditional_test_data_types.py
CommonPython/spark_agg_methods_common_python/challenges/deduplication/: dedupe_record_runs.py  dedupe_test_data_types.py
CommonPython/spark_agg_methods_common_python/challenges/sectional/: section_nospark_logic.py  section_persist_test_data.py  section_record_runs.py  section_test_data_types.py
CommonPython/spark_agg_methods_common_python/utils/: ensure_has_memory.py  inspection.py  pandas_helpers.py
SparkAggMethods_CommonPython/: cspell.json  frozen_requirements.txt  makefile.ps1  pyproject.toml  pyrightconfig.json  pytest.ini  readme.md  requirements.txt
SparkAggMethods_CommonPython/spark_agg_methods_common_python/: challenge_strategy_registry.py  perf_test_common.py
SparkAggMethods_CommonPython/spark_agg_methods_common_python/utils/: call_with_timeout.py  platform.py  utils.py
(+1124 files in other folders)
