[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spark_agg_methods_common_python"
version = "0.0.1"
dependencies = [
    "numpy",
    "pandas",
    "prettyprinter",
    "psutil",
    "pydantic",
    "pytest",
    "pytz",
    "scipy",
]


[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters
